--- a/66.md
+++ b/66.md
@@ -19,6 +19,8 @@ This NIP defines how Nostr protocol can support trade.
 
 `Products` - Describe the products (goods or srvices) that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
 
+`Rating` - This is a new type of event that describes ratings supplied by a Nostr user to a skill or product.
+
 
 
 
