--- a/66.md
+++ b/66.md
@@ -11,18 +11,34 @@ This NIP defines how Nostr protocol can support trade.
 
 ## Definitions
 
-`Product` - A new typoe of event that describes a purchasable product
+### POS Service Supplier
+A service that allows setting up an online sell page for a product. Preferebly with lightning as it integrates well with Nostr. A POS supplier url can be part of a Product event allowing redirecting users to a buy page of the product upplied by the POS service
 
-`POS Service Supplier` - A service that allows setting up an online sell page for product. Preferebly with lightning as it integrates well with Nostr. A POS supplier url can be part of a Product event allowing redirecting users to a buy page of the product upplied by the POS service
+### Product Event
+A new kind of event that describes a purchasable product defined by the following ontop of the Nostr event.
+```json
+{  
 
-`Skills` - Describe the skills of a Nostr profile in regards to goods or services that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
+  "tags": [   
+    ["image", <url of product image>],
+    ["cat", <a list of strings as categories that the product belongs to>],
+        
+  ],
+  "content", <Product text description>,  
+}
+```
 
-`Products` - Describe the products (goods or srvices) that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
+### Skills and Product Tags
+Both are new tags added to 'set_metadata' event
+- `skills`: a list that describes the skills of a Nostr profile in regards to goods or services that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
+- `products`: a list that describes the products (goods or srvices) that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
 
-`Rating` - This is a new type of event that describes ratings supplied by a Nostr user to a skill or product.
+### Rating Event
+This is a new type of event that describes ratings supplied by a Nostr user to a skill or product.
 
 
-
+## High level Description of the elements composing Nostr Trade
+Product Event
 
 
 ## High level use cases 
