--- a/66.md
+++ b/66.md
@@ -12,19 +12,24 @@ This NIP defines how Nostr protocol can support trade.
 ## Definitions
 
 ### POS Service Supplier
-A service that allows setting up an online sell page for a product. Preferebly with lightning as it integrates well with Nostr. A POS supplier url can be part of a Product event allowing redirecting users to a buy page of the product upplied by the POS service
+A service that allows setting up a single product sell page. Preferebly with lightning as it integrates well with Nostr. 
+A POS supplier url can be part of a Product event allowing redirecting users to a buy page of the product supplied by the POS service
 
 ### Product Event
-A new kind of event that describes a purchasable product defined by the following ontop of the Nostr event.
+A specialm event of kind 66 that describes a purchasable product defined by the following on top of the Nostr event.
+Example:
 ```json
 {  
-
+  "kind":66,
   "tags": [   
-    ["image", <url of product image>],
-    ["cat", <a list of strings as categories that the product belongs to>],
-        
+    ["image", "https://imgur.com/gallery/X9NwR" <url to an image or video that describes the product>],
+    ["pu", "https://breez.technology/dani/coffe-machine",<POS service supplier url to a single page that sells this product>],
+    ["pc","dkfjslfjweoinnnjoipdjsfd", <text based context cookie that POS service returns when product sell page is created>],
+    ["cat", "kitchen","tool", "coffee",<a list of strings as categories that the product belongs to>],
+    ["price":"15" <price of product>],,
+    ["unit":"Sats","Unit of account by which the price is denoted"]
   ],
-  "content", <Product text description>,  
+  "content", "Cofee machine made by amataures. Best for getting coffee with love" <Product text description>,  
 }
 ```
 
