Testing commit from pycharm

--- a/66.md
+++ b/66.md
@@ -26,7 +26,7 @@ Example:
     ["pu", "https://breez.technology/dani/coffe-machine",<POS service supplier url to a single page that sells this product>],
     ["pc","dkfjslfjweoinnnjoipdjsfd", <text based context cookie that POS service returns when product sell page is created>],
     ["cat", "kitchen","tool", "coffee",<a list of strings as categories that the product belongs to>],
-    ["price","15" <price of product>],,
+    ["price","15" <price of product>],
     ["unit","Sats"<Unit of account by which the price is denoted>]
   ],
   "content":"Cofee machine made by amataures. Best for getting coffee with love" <Product text description>
