--- a/11.md
+++ b/11.md
@@ -1,58 +1,75 @@
-NIP-11
+NIP-66
 ======
 
-Relay Information Document
----------------------------
+Trade Support
+--------------
 
-`draft` `optional` `author:scsibug`
+`draft` `optional` 
 
-Relays may provide server metadata to clients to inform them of capabilities, administrative contacts, and various server attributes.  This is made available as a JSON document over HTTP, on the same URI as the relay's websocket.
+This NIP defines how Nostr protocol can support trade.
 
-When a relay receives an HTTP(s) request with an `Accept` header of `application/nostr+json` to a URI supporting WebSocket upgrades, they SHOULD return a document with the following structure.
+## Building blocks
+The following 4 building blocks enable trading products over Nostr
 
+### POS Service Supplier
+A web service that allows setting up a single product sell page. Preferebly with lightning as it integrates well with Nostr. 
+A POS supplier url can be part of a Product event allowing redirecting users to a buy page of the product supplied by the POS service
+
+### Product Event
+A specialized event of kind 66 that describes a purchasable product.
+
+### Skills and Product Tags
+New tags added to 'set_metadata' event to describe skills attributed to a profile and purchasable products relating to this profile 
+- `skills`: a list that describes the skills of a Nostr profile in regards to goods or services that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
+- `products`: a list that describes the products (goods or srvices) that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
+
+### Rating Event
+This is a new special event that describes ratings supplied by a Nostr user to a skill or product.
+
+## Explenation of building blocks
+
+### Product Event
+Composed of the following fields:
+Example:
 ```json
-{
-  "name": <string identifying relay>,
-  "description": <string with detailed information>,
-  "pubkey": <administrative contact pubkey>,
-  "contact": <administrative alternate contact>,
-  "supported_nips": <a list of NIP numbers supported by the relay>,
-  "software": <string identifying relay software URL>,
-  "version": <string version identifier>
+{  
+  "kind":66,
+  "tags": [   
+    ["image", "https://imgur.com/gallery/X9NwR" <url to an image or video that describes the product>],
+    ["pos", "https://breez.technology/dani/coffe-machine",<POS service supplier url to a single page that sells this product>],
+    ["cookie", "0xdewfefiiiwwwdvsfgr#$" <POS service proprietry data that describes the prodct and sould be passed to the POS url when redirecting to POS selll page>],
+    ["pc","dkfjslfjweoinnnjoipdjsfd", <text based context cookie that POS service returns when product sell page is created>],
+    ["cat", "kitchen","tool", "coffee",<a list of strings as categories that the product belongs to>],
+    ["price","15" <price of product>],
+    ["unit","Sats"<Unit of account by which the price is denoted>]
+  ],
+  "content":"Cofee machine made by amataures. Best for getting coffee with love" <Product text description>
 }
 ```
+This event can be created by a client that supplies the UI for a user to define a product in Nostr. 
+The user defines a product much like in existing e-commerce platform (Shopify).
+The client creates a Nostr event that describes this product.
+The client is also responsible to integrate with a POS supplier and set the pos tag and the cooickie tag in a way that will open the POS sell page correctly whae calling the url with the cookie.
 
-Any field may be omitted, and clients MUST ignore any additional fields they do not understand. Relays MUST accept CORS requests by sending `Access-Control-Allow-Origin`, `Access-Control-Allow-Headers`, and `Access-Control-Allow-Methods` headers.
+### Skills and Product Tags
+New tags added to 'set_metadata' event to describe skills attributed to a profile and purchasable products relating to this profile 
+- `skills`: a list that describes the skills of a Nostr profile in regards to goods or services that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
+- `products`: a list that describes the products (goods or srvices) that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
 
-Field Descriptions
------------------
+### Rating Event
+This is a new special event that describes ratings supplied by a Nostr user to a skill or product.
 
-### Name ###
 
-A relay may select a `name` for use in client software.  This is a string, and SHOULD be less than 30 characters to avoid client truncation.
 
-### Description ###
+## High level use cases 
+aaa
 
-Detailed plain-text information about the relay may be contained in the `description` string.  It is recommended that this contain no markup, formatting or line breaks for word wrapping, and simply use double newline characters to separate paragraphs.  There are no limitations on length.
+### Product creation 
+aaa
 
-### Pubkey ###
+### Product purchsing by user
 
-An administrative contact may be listed with a `pubkey`, in the same format as Nostr events (32-byte hex for a `secp256k1` public key).  If a contact is listed, this provides clients with a recommended address to send encrypted direct messages (See `NIP-04`) to a system administrator.  Expected uses of this address are to report abuse or illegal content, file bug reports, or request other technical assistance.
+aaa
 
-Relay operators have no obligation to respond to direct messages.
+### Rating
 
-### Contact ###
-
-An alternative contact may be listed under the `contact` field as well, with the same purpose as `pubkey`.  Use of a Nostr public key and direct message SHOULD be preferred over this.  Contents of this field SHOULD be a URI, using schemes such as `mailto` or `https` to provide users with a means of contact.
-
-### Supported NIPs ###
-
-As the Nostr protocol evolves, some functionality may only be available by relays that implement a specific `NIP`.  This field is an array of the integer identifiers of `NIP`s that are implemented in the relay.  Examples would include `1`, for `"NIP-01"` and `9`, for `"NIP-09"`.  Client-side `NIPs` SHOULD NOT be advertised, and can be ignored by clients.
-
-### Software ###
-
-The relay server implementation MAY be provided in the `software` attribute.  If present, this MUST be a URL to the project's homepage.
-
-### Version ###
-
-The relay MAY choose to publish its software version as a string attribute.  The string format is defined by the relay implementation.  It is recommended this be a version number or commit identifier.
