--- a/66.md
+++ b/66.md
@@ -8,22 +8,36 @@ Trade Support
 
 This NIP defines how Nostr protocol can support trade.
 
-
-## Definitions
+## Building blocks
+The following 4 building blocks enable trading products over Nostr
 
 ### POS Service Supplier
-A service that allows setting up a single product sell page. Preferebly with lightning as it integrates well with Nostr. 
+A web service that allows setting up a single product sell page. Preferebly with lightning as it integrates well with Nostr. 
 A POS supplier url can be part of a Product event allowing redirecting users to a buy page of the product supplied by the POS service
 
 ### Product Event
-A specialm event of kind 66 that describes a purchasable product defined by the following on top of the Nostr event.
+A specialized event of kind 66 that describes a purchasable product.
+
+### Skills and Product Tags
+New tags added to 'set_metadata' event to describe skills attributed to a profile and purchasable products relating to this profile 
+- `skills`: a list that describes the skills of a Nostr profile in regards to goods or services that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
+- `products`: a list that describes the products (goods or srvices) that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
+
+### Rating Event
+This is a new special event that describes ratings supplied by a Nostr user to a skill or product.
+
+## Explenation of building blocks
+
+### Product Event
+Composed of the following fields:
 Example:
 ```json
 {  
   "kind":66,
   "tags": [   
     ["image", "https://imgur.com/gallery/X9NwR" <url to an image or video that describes the product>],
-    ["pu", "https://breez.technology/dani/coffe-machine",<POS service supplier url to a single page that sells this product>],
+    ["pos", "https://breez.technology/dani/coffe-machine",<POS service supplier url to a single page that sells this product>],
+    ["cookie", "0xdewfefiiiwwwdvsfgr#$" <POS service proprietry data that describes the prodct and sould be passed to the POS url when redirecting to POS selll page>],
     ["pc","dkfjslfjweoinnnjoipdjsfd", <text based context cookie that POS service returns when product sell page is created>],
     ["cat", "kitchen","tool", "coffee",<a list of strings as categories that the product belongs to>],
     ["price","15" <price of product>],
@@ -32,18 +46,19 @@ Example:
   "content":"Cofee machine made by amataures. Best for getting coffee with love" <Product text description>
 }
 ```
+This event can be created by a client that supplies the UI for a user to define a product in Nostr. 
+The user defines a product much like in existing e-commerce platform (Shopify).
+The client creates a Nostr event that describes this product.
+The client is also responsible to integrate with a POS supplier and set the pos tag and the cooickie tag in a way that will open the POS sell page correctly whae calling the url with the cookie.
 
 ### Skills and Product Tags
-Both are new tags added to 'set_metadata' event
+New tags added to 'set_metadata' event to describe skills attributed to a profile and purchasable products relating to this profile 
 - `skills`: a list that describes the skills of a Nostr profile in regards to goods or services that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
 - `products`: a list that describes the products (goods or srvices) that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
 
 ### Rating Event
-This is a new type of event that describes ratings supplied by a Nostr user to a skill or product.
+This is a new special event that describes ratings supplied by a Nostr user to a skill or product.
 
-
-## High level Description of the elements composing Nostr Trade
-Product Event
 
 
 ## High level use cases 
