--- a/66.md
+++ b/66.md
@@ -9,36 +9,47 @@ Trade Support
 This NIP defines how Nostr protocol can support trade.
 
 ## Building blocks
-The following 4 building blocks enable trading products over Nostr
+The following 3 building blocks enable trading products over Nostr
 
 ### POS Service Supplier
 A web service that allows setting up a single product sell page. Preferebly with lightning as it integrates well with Nostr. 
 A POS supplier url can be part of a Product event allowing redirecting users to a buy page of the product supplied by the POS service
 
 ### Product Event
-A specialized event of kind 66 that describes a purchasable product.
-
-### Skills and Product Tags
-New tags added to 'set_metadata' event to describe skills attributed to a profile and purchasable products relating to this profile 
-- `skills`: a list that describes the skills of a Nostr profile in regards to goods or services that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
-- `products`: a list that describes the products (goods or srvices) that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
+A new special event of kind 66 that describes a purchasable product.
 
 ### Rating Event
-This is a new special event that describes ratings supplied by a Nostr user to a skill or product.
+A a new special event that describes ratings assigned by a Nostr user to a product.
 
 ## Explenation of building blocks
 
 ### Product Event
-Composed of the following fields:
-Example:
 ```json
 {  
   "kind":66,
   "tags": [   
     ["image", "https://imgur.com/gallery/X9NwR" <url to an image or video that describes the product>],
     ["pos", "https://breez.technology/dani/coffe-machine",<POS service supplier url to a single page that sells this product>],
-    ["cookie", "0xdewfefiiiwwwdvsfgr#$" <POS service proprietry data that describes the prodct and sould be passed to the POS url when redirecting to POS selll page>],
-    ["pc","dkfjslfjweoinnnjoipdjsfd", <text based context cookie that POS service returns when product sell page is created>],
+    ["cookie", "0xdewfefiiiwwwdvsfgr#$" <text based context cookie that the POS service can return when product sell page creation completes>],
+    ["pc","dkfjslfjweoinnnjoipdjsfd", <>],
+    ["cat", "kitchen","tool", "coffee",<a list of strings as categories that the product belongs to>],
+    ["price","15" <price of product>],
+    ["unit","Sats"<Unit of account by which the price is denoted>]
+  ],
+  "content":"Cofee machine made by amataures. Best for getting coffee with love" <Product text description>,
+  "pubkey":<The event creator is the seller of the product>       
+}
+```
+
+### Rating Event
+This is a new special event. It is created by users to rate the skills or products of other users. It adds the following fields
+```json
+{  
+  "kind":67,
+  "tags": [   
+    ["rating", "9" <rating value reflecting quality of the rated thing>],
+    ["range","1","10", <range in which the above rating value is set>],
+    ["e":"possible product event rated by this rating event">],
     ["cat", "kitchen","tool", "coffee",<a list of strings as categories that the product belongs to>],
     ["price","15" <price of product>],
     ["unit","Sats"<Unit of account by which the price is denoted>]
@@ -46,30 +57,18 @@ Example:
   "content":"Cofee machine made by amataures. Best for getting coffee with love" <Product text description>
 }
 ```
-This event can be created by a client that supplies the UI for a user to define a product in Nostr. 
-The user defines a product much like in existing e-commerce platform (Shopify).
-The client creates a Nostr event that describes this product.
-The client is also responsible to integrate with a POS supplier and set the pos tag and the cooickie tag in a way that will open the POS sell page correctly whae calling the url with the cookie.
 
-### Skills and Product Tags
-New tags added to 'set_metadata' event to describe skills attributed to a profile and purchasable products relating to this profile 
-- `skills`: a list that describes the skills of a Nostr profile in regards to goods or services that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
-- `products`: a list that describes the products (goods or srvices) that are supplied by this profile. This is a new tag added to the 'set_metadata' event.
+### Product creation flow 
+A client Nostr client that support product creation can encusulate the creation of product by:
+- Enabling a user to suply product text and media description.
+- Redirect user to POS supplier supplier page to let the user define a sell page and recieve data back from POS supplier.
+- Fill all Product events with user info and POS suppier info.
+- Create the event and write to relays on behalf of the user 
+For the user, craeting a product can be like in existing e-commerce platform (Shopify).
 
-### Rating Event
-This is a new special event that describes ratings supplied by a Nostr user to a skill or product.
-
-
-
-## High level use cases 
-aaa
-
-### Product creation 
-aaa
-
-### Product purchsing by user
-
-aaa
+### Diaplaying products
+Clients that support products displaying can displlay a store like view for all product events associated to one or more users.
+A generic 'buy' buttun can be displayed per product. Clicking that redirects to the sell page of this product passing the cookie if exist.
 
 ### Rating
-
+Clietnt ca identify product events and let user create rate events associated to them.
