Add 'Product Purchase Event' and fix some typos

--- a/66.md
+++ b/66.md
@@ -1,4 +1,4 @@
-NIP-66
+NIP-xx
 ======
 
 Trade Support
@@ -6,7 +6,7 @@ Trade Support
 
 `draft` `optional` 
 
-This NIP defines how Nostr protocol can support trade.
+This NIP defines how Nostr protocol can support trade (Ecommerce).
 
 ## Building blocks
 The following 3 building blocks enable trading products over Nostr
@@ -16,22 +16,24 @@ A web service that allows setting up a single product sell page. Preferebly with
 A POS supplier url can be part of a Product event allowing redirecting users to a buy page of the product supplied by the POS service
 
 ### Product Event
-A new special event of kind 66 that describes a purchasable product.
+A new special event of kind xx that describes a purchasable product.
+
+### Product Purchase Event
+A new special event of kind xx+1 describes how to purchase a product. This event links a POS service supplier to the product. 
+Keeping the method of purchasing separated from the product allows changing POS supplier with no effect on product data, rating and reputation.   
 
 ### Rating Event
-A a new special event that describes ratings assigned by a Nostr user to a product.
+A new special event of kind xx+2 that describes ratings assigned by a Nostr user to a product.
+
 
 ## Explenation of building blocks
 
 ### Product Event
 ```json
 {  
-  "kind":66,
+  "kind":xx,
   "tags": [   
     ["image", "https://imgur.com/gallery/X9NwR" <url to an image or video that describes the product>],
-    ["pos", "https://breez.technology/dani/coffe-machine",<POS service supplier url to a single page that sells this product>],
-    ["cookie", "0xdewfefiiiwwwdvsfgr#$" <text based context cookie that the POS service can return when product sell page creation completes>],
-    ["pc","dkfjslfjweoinnnjoipdjsfd", <>],
     ["cat", "kitchen","tool", "coffee",<a list of strings as categories that the product belongs to>],
     ["price","15" <price of product>],
     ["unit","Sats"<Unit of account by which the price is denoted>]
@@ -41,30 +43,50 @@ A a new special event that describes ratings assigned by a Nostr user to a produ
 }
 ```
 
+### Product Purchase Event
+This event enables purchusing the product. connects to a product event and has additional tags that specify:
+- The POS Service Supplier through which the product can be purchased
+- Opaque data to pass to the POS service supplier indicates to it the product being purchased. This data was probably supplied by the POS service supplier when the seller registered the product.
+Keeping the method of purchasing separated from the product allows changing POS supplier while keeping all product data, rating and reputation.
+```json
+{  
+  "kind":xx,
+  "tags": [
+    ["pos", "https://breez.technology/dani/coffe-machine",<POS service supplier url to a single page that sells this product>],
+    ["cookie", "0xdewfefiiiwwwdvsfgr#$" <text based context cookie that the POS service can return when product sell page creation completes>],
+    ["e" <Product event of the product you can buy by calling the POS url and passing the cookie >],
+  ],
+  "pubkey":<The event creator is the seller of the product>       
+}
+```
+
 ### Rating Event
 This is a new special event. It is created by users to rate the skills or products of other users. It adds the following fields
 ```json
 {  
-  "kind":67,
+  "kind":xx+2,
   "tags": [   
     ["rating", "9" <rating value reflecting quality of the rated thing>],
     ["range","1","10", <range in which the above rating value is set>],
-    ["e":"possible product event rated by this rating event">],
+    ["e": <product event rated by this rating event>],
     ["cat", "kitchen","tool", "coffee",<a list of strings as categories that the product belongs to>],
     ["price","15" <price of product>],
-    ["unit","Sats"<Unit of account by which the price is denoted>]
+    ["unit","Sats" <Unit of account by which the price is denoted>]
   ],
   "content":"Cofee machine made by amataures. Best for getting coffee with love" <Product text description>
 }
 ```
 
 ### Product creation flow 
-A client Nostr client that support product creation can encusulate the creation of product by:
-- Enabling a user to suply product text and media description.
-- Redirect user to POS supplier supplier page to let the user define a sell page and recieve data back from POS supplier.
-- Fill all Product events with user info and POS suppier info.
-- Create the event and write to relays on behalf of the user 
-For the user, craeting a product can be like in existing e-commerce platform (Shopify).
+A Nostr client that support product creation can encupsulate the creation of product by:
+- Enabling a user to supply product text and media description.
+- Fill all Product events with user info
+- Create Product event and write to relays on behalf of the user
+- Redirect user to POS supplier page to let the user define a sell page and recieve data back from POS supplier.
+- Create Product Purchase Event that is conencted to the Product event
+ 
+For the user, this can feel very much like creating a product in existing e-commerce platforms (Shopify, Woocommerse,...).
+
 
 ### Diaplaying products
 Clients that support products displaying can displlay a store like view for all product events associated to one or more users.
